--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,11 +1,11 @@
----
+<!-- ---
 layout: default
 title: Projects
 permalink: /projects/
 weight: 1
-remote_projects: 
+remote_projects:
   - git-for-wizards
   - arduino-visitor-counter
 ---
 
-{% include projects/index.html %}
+{% include projects/index.html %} -->
